@@ -75,6 +75,7 @@ version ? (????-??-??):
   - added %if substitution symbol for interface name [chilan]
   - BTS#0000892: Fixed bug where phpui/style wasn't used on login page [alec]
   - we can use percentage and amount discounts [chilan]
+  - BTS#0000894: lmsd/parser: Fixed SQL query for NODES variable [alec]
 
 version 1.11.13 Dira (2011-04-07)
 
